--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ button {
   box-shadow: 0 0px 1px hsla(0, 0%, 0%, 0.2), 0 1px 2px hsla(0, 0%, 0%, 0.2);
   background-color: white;
   line-height: 1.5;
-  margin: 0;
+  margin: 0 10px 0 10px;
 }
 
 button {
@@ -52,12 +52,12 @@ input:hover,
 button:hover {
   box-shadow: 0 0px 1px hsla(0, 0%, 0%, 0.6), 0 1px 2px hsla(0, 0%, 0%, 0.2);
   }
-  
+
   button:active {
     box-shadow: 0 0px 1px hsla(0, 0%, 0%, 0.4);
     transform: translateY(1px);
   }
-  
+
   /* Card styles for SimpleCounter components */
   .card {
     padding: 2em;
@@ -66,7 +66,7 @@ button:hover {
     border-radius: 8px;
     background: #f7f7f7;
   }
-  
+
   /* Avatar styles for Profile component */
   .avatar {
     border-radius: 50%;
