--- a/src/pages/simpleCounter/SimpleCounter.css
+++ b/src/pages/simpleCounter/SimpleCounter.css
@@ -36,10 +36,10 @@
 .card {
   padding: 2em;
 
-  button {
+  /* button {
     margin-left: 10px;
     margin-right: 10px;
-  }
+  } */
 }
 
 .read-the-docs {
